Исправления и рефакторинг
